<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/llWorkDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_date_range_black_24dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/reschedule_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/time_black_24dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/preferable_time"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spnPrefTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/timings"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:popupBackground="@color/white"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnReschedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_background"
        android:onClick="btnReschedule"
        android:text="@string/reschedule"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>