<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:autoLink="phone"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:id="@+id/txtAvailability"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:id="@+id/txtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:id="@+id/txtLandMark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:id="@+id/txtPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:textIsSelectable="true"
                        />

                    <TextView
                        android:id="@+id/txtWorkType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:textIsSelectable="true"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/work_estimate"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ic_date_range_black_24dp"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:hint="Start Date"
                            android:onClick="tvStartDate"
                            android:text=""
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txtStartDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ic_date_range_black_24dp"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:hint="Finish Date"
                            android:onClick="tvFinishDate"
                            android:text=""
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txtEndDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="10dp">

                            <EditText
                                android:id="@+id/etDetails"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Details" />

                        </android.support.design.widget.TextInputLayout>
                        <ImageView
                            android:id="@+id/ivComment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_send_black_24dp"
                            android:onClick="ivComment"
                            android:layout_gravity="center_vertical"/>

                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/view_comments"
                        android:onClick="viewComments"
                        android:clickable="true"
                        android:textColor="@color/blue"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Note:"
                        android:textStyle="bold"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Estimate is the rough time duration that a work can finish, Estimate can vary at any time."
                        android:visibility="gone"/>

                    <LinearLayout
                        android:id="@+id/liWorkerLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        >

                        <Button
                            android:id="@+id/btnComplete"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="0.33"
                            android:background="@drawable/button_background"
                            android:onClick="btnComplete"
                            android:text="Complete"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/btnStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="0.33"
                            android:background="@drawable/button_background"
                            android:onClick="btnStart"
                            android:text="Start"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/btnComplaint"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="0.33"
                            android:background="@drawable/button_background"
                            android:onClick="btnComplaint"
                            android:text="Complaint"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/liSupervisorLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/btnInspect"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="0.5"
                            android:background="@drawable/button_background"
                            android:onClick="btnInspect"
                            android:text="Inspect"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/btnSpComplaint"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="0.5"
                            android:background="@drawable/button_background"
                            android:onClick="btnSupervisorComplaints"
                            android:text="Complaint"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnHold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/button_background"
                        android:onClick="btnHold"
                        android:text="@string/reschedule"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>